[package]
name = "apca_datav2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder    = "0.10.2"
serde_json        = "1.0.66"
serde_repr        = "0.1.7"
chrono            = {version = "0.4.19",  features = ["serde"] }
serde             = {version = "1.0.127", features = ["derive"] }
reqwest           = {version = "0.11.4",  features = ["json"] }
tokio-tungstenite = {version = "0.15.0",  features = ["native-tls"] }
tokio             = {version = "1.9.0",   features = ["full"]}
futures           = "0.3.16"
thiserror         = "1.0.26"

[dev-dependencies]
url               = "2.0.0"
dotenv_codegen    = "0.15.0"
anyhow            = "1.0.42"